--- a/ContactsManager.UI/Views/Shared/_Layout.cshtml
+++ b/ContactsManager.UI/Views/Shared/_Layout.cshtml
@@ -23,12 +23,31 @@
                 
                 <div class="flex-1 pr" id="search-box-div">
                     <div class="navbar account-links text-right">
-                        <ul>
-                            <li>
-                                <a asp-controller="Account" asp-action="Register">Register</a>
-                                <a asp-controller="Account" asp-action="Login">Login</a>
-                            </li>
-                        </ul>
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            <ul>
+                                <li>
+                                    @User.Identity?.Name
+                                </li>
+                                <li>
+                                    <a asp-controller="Account" asp-action="Logout">Logout</a>
+                                </li>
+                            </ul>
+                        }
+                        else
+                        {
+                            <ul>
+                                <li>
+                                    @User.Identity?.Name
+                                </li>
+                                <li>
+                                    <a asp-controller="Account" asp-action="Register">Register</a>
+                                </li>
+                                <li>
+                                    <a asp-controller="Account" asp-action="Login">Login</a>
+                                </li>
+                            </ul>
+                        }
                     </div>
                 </div>
             </div>
