Active Nav Link ✅

--- a/ContactsManager.UI/Views/Persons/Create.cshtml
+++ b/ContactsManager.UI/Views/Persons/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model PersonAddRequest
 @{
     ViewBag.Title = "Create Person";
+    ViewBag.CurrentUrl = "~/Persons/Create";
 }
 
 <h2>Create Person</h2>
