--- a/ContactsManager.UI/Views/Persons/Delete.cshtml
+++ b/ContactsManager.UI/Views/Persons/Delete.cshtml
@@ -1,6 +1,7 @@
 ﻿@model PersonResponse
 @{
     ViewBag.Title = "Delete Person";
+    ViewBag.CurrentUrl = "~/Persons/Delete";
 }
 @* breadcrumb starts *@
 <div class="flex">
