--- a/ContactsManager.UI/Views/Shared/_Layout.cshtml
+++ b/ContactsManager.UI/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         {
                             <ul>
                                 <li>
+                                    <i class="fa-solid fa-user"></i>
                                     @User.Identity?.Name
                                 </li>
                                 <li>
@@ -36,17 +37,32 @@
                         }
                         else
                         {
-                            <ul>
+                            @if (ViewBag.CurrentUrl == "~/Account/Register")
+                            {
                                 <li>
-                                    @User.Identity?.Name
+                                    <a asp-controller="Account" asp-action="Register" class="nav-active">Register</a>
                                 </li>
+                            } 
+                            else
+                            {
                                 <li>
                                     <a asp-controller="Account" asp-action="Register">Register</a>
                                 </li>
+                            }
+
+                            @if (ViewBag.CurrentUrl == "~/Account/Login")
+                            {
+                                <li>
+                                    <a asp-controller="Account" asp-action="Login" class="nav-active">Login</a>
+                                </li>
+                            } 
+                            else
+                            {
                                 <li>
                                     <a asp-controller="Account" asp-action="Login">Login</a>
                                 </li>
-                            </ul>
+                            }
+
                         }
                     </div>
                 </div>
@@ -54,10 +70,30 @@
         </div>
         <div class="navbar mb">
             <ul>
-                <li>
-                    <a asp-controller="Persons" asp-action="Index">Persons</a>
-                    <a asp-controller="Countries" asp-action="UploadFromExcel">Upload Countries</a>
-                </li>
+                @if (ViewBag.CurrentUrl == "~/Persons/Index")
+                {
+                    <li>
+                        <a asp-controller="Persons" asp-action="Index" class="nav-active">Persons</a>
+                    </li>
+                } else
+                {
+                    <li>
+                        <a asp-controller="Persons" asp-action="Index">Persons</a>
+                    </li>
+                }
+                    @if (ViewBag.CurrentUrl == "~/Countries/UploadFromExcel")
+                {
+                    <li>
+                        <a asp-controller="Countries" asp-action="UploadFromExcel" class="nav-active">Upload Countries</a>
+                    </li>
+                } 
+                else
+                {
+                    <li>
+                        <a asp-controller="Countries" asp-action="UploadFromExcel">Upload Countries</a>
+                    </li>
+                }
+               
             </ul>
         </div>
 
