--- a/ContactsManager.UI/Views/Shared/_Layout.cshtml
+++ b/ContactsManager.UI/Views/Shared/_Layout.cshtml
@@ -10,99 +10,112 @@
 
 </head>
 <body>
-<div class="container">
-    <div class="page-content">
-        <div class="margin-bottom">
-            <div class="flex" id="top-bar-div">
-                <div class="flex-1" id="app-title-div">
-                    <h1 class="app-title">
-                        <i class="fa-solid fa-people-group"></i>
-                        Contacts Manager
-                    </h1>
-                </div>
-                
-                <div class="flex-1 pr" id="search-box-div">
-                    <div class="navbar account-links text-right">
-                        @if(User.Identity.IsAuthenticated)
-                        {
+    <div class="container">
+        <div class="page-content">
+
+            <div class="margin-bottom">
+                <div class="flex" id="top-bar-div">
+                    <div class="flex-1" id="app-title-div">
+                        <h1 class="app-title">
+                            <i class="fa-solid fa-people-simple"></i>
+                            Contacts Manager
+                        </h1>
+                    </div>
+
+
+                    <div class="flex-1 pr" id="search-box-div">
+                        <div class="navbar account-links">
+
                             <ul>
-                                <li>
-                                    <i class="fa-solid fa-user"></i>
-                                    @User.Identity?.Name
-                                </li>
-                                <li>
-                                    <a asp-controller="Account" asp-action="Logout">Logout</a>
-                                </li>
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    <li>
+                                        <i class="fa-solid fa-user"></i>
+                                        @User.Identity?.Name
+                                    </li>
+                                    <li>
+                                        <a asp-controller="Account" asp-action="Logout">Logout</a>
+                                    </li>
+                                }
+                                else
+                                {
+                                    @if (ViewBag.CurrentUrl == "~/Account/Register")
+                                    {
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Register" class="nav-active">Register</a>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Register">Register</a>
+                                        </li>
+                                    }
+
+
+                                    @if (ViewBag.CurrentUrl == "~/Account/Login")
+                                    {
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Login" class="nav-active">Login</a>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Login">Login</a>
+                                        </li>
+                                    }
+
+                                }
                             </ul>
-                        }
-                        else
-                        {
-                            @if (ViewBag.CurrentUrl == "~/Account/Register")
-                            {
-                                <li>
-                                    <a asp-controller="Account" asp-action="Register" class="nav-active">Register</a>
-                                </li>
-                            } 
-                            else
-                            {
-                                <li>
-                                    <a asp-controller="Account" asp-action="Register">Register</a>
-                                </li>
-                            }
 
-                            @if (ViewBag.CurrentUrl == "~/Account/Login")
-                            {
-                                <li>
-                                    <a asp-controller="Account" asp-action="Login" class="nav-active">Login</a>
-                                </li>
-                            } 
-                            else
-                            {
-                                <li>
-                                    <a asp-controller="Account" asp-action="Login">Login</a>
-                                </li>
-                            }
+                        </div>
 
-                        }
                     </div>
                 </div>
+
+            </div>
+
+
+            <div class="navbar mb">
+
+                <ul>
+                    @if (ViewBag.CurrentUrl == "~/Persons/Index")
+                    {
+                        <li>
+                            <a asp-controller="Persons" asp-action="Index" class="nav-active">Persons</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li>
+                            <a asp-controller="Persons" asp-action="Index">Persons</a>
+                        </li>
+                    }
+
+
+                    @if (ViewBag.CurrentUrl == "~/Countries/UploadFromExcel")
+                    {
+                        <li>
+                            <a asp-controller="Countries" asp-action="UploadFromExcel" class="nav-active">Upload Countries</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li>
+                            <a asp-controller="Countries" asp-action="UploadFromExcel">Upload Countries</a>
+                        </li>
+                    }
+
+                </ul>
+            </div>
+
+            <div class="body">
+                @RenderBody()
             </div>
         </div>
-        <div class="navbar mb">
-            <ul>
-                @if (ViewBag.CurrentUrl == "~/Persons/Index")
-                {
-                    <li>
-                        <a asp-controller="Persons" asp-action="Index" class="nav-active">Persons</a>
-                    </li>
-                } else
-                {
-                    <li>
-                        <a asp-controller="Persons" asp-action="Index">Persons</a>
-                    </li>
-                }
-                    @if (ViewBag.CurrentUrl == "~/Countries/UploadFromExcel")
-                {
-                    <li>
-                        <a asp-controller="Countries" asp-action="UploadFromExcel" class="nav-active">Upload Countries</a>
-                    </li>
-                } 
-                else
-                {
-                    <li>
-                        <a asp-controller="Countries" asp-action="UploadFromExcel">Upload Countries</a>
-                    </li>
-                }
-               
-            </ul>
-        </div>
-
-        <div class=".body">
-            @RenderBody()
-        </div>
     </div>
-</div>
 
-@RenderSection("scripts", required: false)
+    @RenderSection("scripts", required: false)
 </body>
 </html>
